<resources>
    <string name="app_name" translatable="false">Mythtv Player</string>
    <string name="minimum_mythtv_version" translatable="false">0.28</string>
    <string name="all_recordings">All Recordings</string>
    <string name="all_videos">All Videos</string>
    <string name="search_title">Search</string>
    <string name="search_results">Search Results</string>
    <string name="recording">Recording</string>
    <string name="video">Video</string>
    <string name="should_start" translatable="false">shouldStart</string>
    <string name="search_hint">Search Show, Movie, Actor, Character, Channel</string>
    <string name="drawer_item_watch_recordings">Watch Recordings</string>
    <string name="drawer_item_watch_videos">Watch Videos</string>
    <string name="drawer_item_preferences">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="recordings_browse_title" translatable="false"><![CDATA[MythTV Recordings]]></string>
    <string name="videos_browse_title" translatable="false"><![CDATA[MythTV Videos]]></string>
    <string name="watch_recording">Watch recording</string>
    <string name="watch_video">Watch video</string>
    <string name="pref_backend_title" translatable="false">Master Backend</string>
    <string name="pref_backend_url_title">Master Backend Address</string>
    <string name="pref_backend_url_description">The hostname or ip address of the master backend</string>
    <string name="pref_backend_url">hostname or ip address</string>
    <string name="pref_backend_port_title" translatable="false">Master Backend Port</string>
    <string name="pref_backend_port_description">The port of the master backend</string>
    <string name="pref_backend_port" translatable="false">6544</string>
    <string name="pref_default_player">Default Player</string>
    <string name="pref_internal_player">Internal Player</string>
    <string name="pref_internal_player_summary_on">Playback will be handled by the Internal Player</string>
    <string name="pref_internal_player_summary_off">Playback will be handled by an External Player</string>
    <string name="pref_show_adult_tab">Show Adult content in Watch Videos</string>
    <string name="pref_show_adult_tab_summary_on">Adult content will be shown</string>
    <string name="pref_show_adult_tab_summary_off">Adult content will not be shown</string>
    <string name="pref_restrict_content_types">Only Display Selected Video Ratings</string>
    <string name="pref_restrict_content_types_summary_on">Videos for all types selected below will be shown</string>
    <string name="pref_restrict_content_types_summary_off">Show All Videos</string>
    <string name="pref_rating_g">G – General Audiences</string>
    <string name="pref_rating_nr">NR – Not Rated</string>
    <string name="pref_rating_pg">PG – Parental Guidance Suggested</string>
    <string name="pref_rating_pg13">PG-13 – Parents Strongly Cautioned</string>
    <string name="pref_rating_r">R – Restricted</string>
    <string name="pref_rating_nc17">NC-17 – Adults Only</string>
    <string name="pref_rating_nr_summary">This film is not rated.</string>
    <string name="pref_rating_g_summary">All ages admitted. Nothing that would offend parents for viewing by children.</string>
    <string name="pref_rating_pg_summary">Some material may not be suitable for children. Parents urged to give \"parental guidance\". May contain some material parents might not like for their young children.</string>
    <string name="pref_rating_pg13_summary">Some material may be inappropriate for children under 13. Parents are urged to be cautious. Some material may be inappropriate for pre-teenagers.</string>
    <string name="pref_rating_r_summary">Under 17 requires accompanying parent or adult guardian. Contains some adult material. Parents are urged to learn more about the film before taking their young children with them.</string>
    <string name="pref_rating_nc17_summary">No One 17 and Under Admitted. Clearly adult. Children are not admitted.</string>
    <string name="pref_content_ratings">Video Content Ratings</string>
    <string name="video_preferences">Video Settings</string>
    <string name="video_preferences_summary">Modify Videos Display and Filters</string>
    <string name="pref_parental_controls">Parental Controls</string>
    <string name="pref_enable_parental_controls">Enable Parental Controls</string>
    <string name="pref_enable_parental_controls_summary_on">Parental Controls are enabled</string>
    <string name="pref_enable_parental_controls_summary_off">Parental Controls are disabled</string>
    <string name="pref_parental_control_level">Select Parental Control level</string>
    <string name="title_activity_settings">Settings</string>
    <string name="recording_preferences">Recording Settings</string>
    <string name="recording_preferences_summary">Modify Recordings Display and Filters</string>
    <string name="pref_enable_recording_group_filter">Enable Recording Group Filter</string>
    <string name="pref_enable_recording_group_summary_on">Only recordings in selected recording group will be displayed</string>
    <string name="pref_enable_recording_group_summary_off">Recording Group Filter is off</string>
    <string name="pref_recording_group_filter">Select Recording Group Filter</string>
    <string name="pref_recording_group_filter_summary_on">Recordings will be filtered by the \'%s\' Recording Group</string>
    <string name="pref_recording_group_filter_summary_off">No Recording Group selected</string>
    <string name="exception_message_generic" translatable="false">There was an application error</string>
    <string name="exception_message_no_connection">Can\'t connect to mythbackend</string>
    <string name="exception_message_program_not_found" translatable="false">Cannot retrieve program data. Check your internet connection</string>
    <string name="recording_description_label" translatable="false">Details:</string>
    <string name="encoder" translatable="false">Encoder %1$s [%2$s] is %3$s</string>
    <string name="encoder_state_error" translatable="false">in an errored state</string>
    <string name="encoder_state_idle">idle</string>
    <string name="encoder_state_watching_live_tv" translatable="false">watching live tv</string>
    <string name="encoder_state_watching_recorded" translatable="false">watching recorded</string>
    <string name="encoder_state_watching_video" translatable="false">watching a video</string>
    <string name="encoder_state_watching_dvd">watching a DVD</string>
    <string name="encoder_state_watching_bd">watching a Blu-ray disc</string>
    <string name="encoder_state_watching_recording" translatable="false">watching a recording</string>
    <string name="encoder_state_recording">recording</string>
    <string name="encoder_state_changing_state" translatable="false">changing state</string>
    <string name="minutes" translatable="false">%1$s Min</string>
    <string name="retry" translatable="false">Retry</string>
    <string name="drawer_item_home" translatable="false">Home</string>
    <string name="error_fragment" translatable="false">Error Fragment</string>
    <string name="watch" translatable="false">Watch</string>
    <string name="movie" translatable="false">Movie</string>
    <string name="tv_settings_title_description">MythTV Player backend and content settings</string>
    <string name="tv_settings_master_backend_description">Master Backend Connection Settings</string>
    <string name="tv_settings_playback_internal_player">Internal Player</string>
    <string name="tv_settings_playback_internal_player_description">Use the Internal Player for Recording and Video Playback</string>
    <string name="tv_settings_yes">Yes</string>
    <string name="tv_settings_no">No</string>
    <string name="backdrop_content_description">backdrop</string>
    <string name="encoder_item_recording_image_content_description">encoder_item_recording_image</string>
    <string name="nav_drawer_logo_content_description">nav_drawer_logo</string>
    <string name="tv_item_category_content_description">tv_item_category</string>
    <string name="remove_live_stream_title">Remove Live Stream?</string>
    <string name="remove_live_stream_positive_label">Remove</string>
    <string name="add_live_stream_positive_label">Create</string>
    <string name="add_live_stream_title">Create Live Stream?</string>
    <string name="versionLabel">Version:</string>
    <string name="drawer_item_about">About</string>
    <string name="close">Close</string>
    <string name="branchLabel">Branch:</string>
    <string name="shaLabel">Commit:</string>
    <string name="tagLabel">Tag:</string>
    <string name="chromecast_label" translatable="false">Chromecast</string>
    <string name="castErrorLabel">This item can not be displayed on a Google Cast device.</string>
    <string name="castNotReadyLabel">This item is not yet ready for casting, please try again later.</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_unaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="transition_image" translatable="false">transition-image</string>
    <string name="loading">Loading&#8230;</string>
    <string name="pref_enable_analytics_label">Analytics</string>
    <string name="pref_enable_analytics_title">Enable Analytics Reporting</string>
    <string name="pref_enable_analytics_summary_on">Anonymous Analytics will be sent</string>
    <string name="pref_enable_analytics_summary_off">Anonymous Analytics will not be sent</string>
    <string name="action_create_hls_stream">Create HTTP Live Stream</string>
    <string name="action_remove_hls_stream">Remove HTTP Live Stream</string>
    <string name="action_mark_watched">Mark Watched</string>
    <string name="action_mark_unwatched">Mark Unwatched</string>
    <string name="cd_background">background</string>
    <string name="cd_coverart">coverart</string>
    <string name="cd_play">play</string>
    <string name="cd_bookmark">bookmark</string>
    <string name="cd_image_view_button_1">image view button 1</string>
    <string name="cd_image_view_button_2">image_view_button_2</string>
    <string name="cd_image_view_button_3">image_view_button_2</string>
    <string name="cd_image_view_button_4">image view button 4</string>
    <string name="cd_image_view_button_5">image view button 5</string>
    <string name="player_timer" translatable="false">0:00</string>
    <string name="title_activity_troubleshoot">Troubleshoot Connection</string>
    <string name="troubleshoot">Troubleshoot</string>
    <string name="airplane_mode_check_label">Airplane Mode must be off</string>
    <string name="network_check_label">Network must be connected</string>
    <string name="master_backend_ping_check_label">Test Master Backend ping response</string>
    <string name="mythtv_services_api_check_label">Test MythTV Services API response</string>
    <string name="drawer_item_troubleshoot">Troubleshoot</string>
    <string name="action_troubleshoot">Troubleshoot</string>
    <string name="troubleshoot_device_in_airplane_mode">Device is in Airplane Mode</string>
    <string name="troubleshoot_device_not_in_airplane_mode">Device is not in Airplane Mode</string>
    <string name="troubleshoot_network_connected">Network is connected</string>
    <string name="pref_filter_hls_only_title">Filter recordings and videos</string>
    <string name="pref_filter_hls_only">Show HLS Only</string>
    <string name="pref_filter_hls_only_summary_on">Only recordings and videos that are HLS transcoded will be shown</string>
    <string name="pref_filter_hls_only_summary_off">All recordings and videos will be shown</string>
</resources>