<!--
  ~ MythTV Player An application for Android users to play MythTV Recordings and Videos
  ~ Copyright (c) 2015. Daniel Frey
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_backend_title"
        android:key="pref_backend_settings">

        <EditTextPreference
            android:key="backend_url"
            android:title="@string/pref_backend_url_title"
            android:summary="@string/pref_backend_url_description"
            android:defaultValue="@string/pref_backend_url"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:maxLines="1" />

        <EditTextPreference
            android:key="backend_port"
            android:title="@string/pref_backend_port_title"
            android:summary="@string/pref_backend_port_description"
            android:defaultValue="@string/pref_backend_port"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:maxLines="1"
            android:numeric="integer"
            android:maxLength="5" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_default_player"
        android:key="pref_default_player">

        <CheckBoxPreference
            android:title="@string/pref_internal_player"
            android:key="internal_player"
            android:defaultValue="true"
            android:summaryOn="@string/pref_internal_player_summary_on"
            android:summaryOff="@string/pref_internal_player_summary_off" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_filter_hls_only_title">

        <CheckBoxPreference
            android:title="@string/pref_filter_hls_only"
            android:key="filter_hls_only"
            android:defaultValue="false"
            android:summaryOn="@string/pref_filter_hls_only_summary_on"
            android:summaryOff="@string/pref_filter_hls_only_summary_off" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/recording_preferences"
        android:key="pref_recording_preferences">

        <PreferenceScreen
            android:title="@string/recording_preferences"
            android:summary="@string/recording_preferences_summary">

            <intent
                android:targetPackage="org.mythtv.android"
                android:targetClass="org.mythtv.android.presentation.view.activity.phone.RecordingSettingsActivity" />

        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/video_preferences"
        android:key="pref_video_preferences">

        <PreferenceScreen
            android:title="@string/video_preferences"
            android:summary="@string/video_preferences_summary">

            <intent
                android:targetPackage="org.mythtv.android"
                android:targetClass="org.mythtv.android.presentation.view.activity.phone.VideoSettingsActivity" />

        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_enable_analytics_label"
        android:key="pref_enable_analytics">

        <CheckBoxPreference
            android:title="@string/pref_enable_analytics_title"
            android:key="enable_analytics"
            android:defaultValue="false"
            android:summaryOn="@string/pref_enable_analytics_summary_on"
            android:summaryOff="@string/pref_enable_analytics_summary_off" />

    </PreferenceCategory>

</PreferenceScreen>
